[package]
name = "iyes_progress"
version = "0.13.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/IyesGames/iyes_progress"
keywords = ["game", "gamedev", "bevy"]
categories = ["game-engines"]
description = "Bevy plugin to help implement loading states"

[dependencies]
bevy_asset = { version = "0.15.0", optional = true }
bevy_ecs = { version = "0.15.0" }
bevy_app = { version = "0.15.0" }
bevy_state = { version = "0.15.0" }
bevy_log = { version = "0.15.0", optional = true }
bevy_utils = { version = "0.15.0" }
parking_lot = "0.12.3"
derive_more = { version = "1.0.0", features = ["full"] }

[features]
# Support for debug functionality (such as logging progress to console)
debug = ["bevy_log"]
assets = ["bevy_asset"]

[dev-dependencies]
bevy = { version = "0.15.0" }
