[package]
name = "iyes_progress"
version = "0.14.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/IyesGames/iyes_progress"
keywords = ["game", "gamedev", "bevy"]
categories = ["game-engines"]
description = "Bevy plugin to help implement loading states"

[dependencies]
bevy_asset = { path = "../bevy", optional = true }
bevy_ecs = { path = "../bevy" }
bevy_app = { path = "../bevy" }
bevy_state = { path = "../bevy" }
bevy_log = { path = "../bevy", optional = true }
bevy_platform_support = { path = "../bevy" }
parking_lot = "0.12.3"
derive_more = { version = "2.0.1", features = ["full"] }
crossbeam-channel = { version = "0.5.14", optional = true }

[features]
# Support for debug functionality (such as logging progress to console)
debug = ["dep:bevy_log"]
assets = ["dep:bevy_asset"]
async = ["dep:crossbeam-channel"]

[dev-dependencies]
bevy = { path = "../bevy" }

[[example]]
name = "async"
required-features = ["async"]
